[package]
name = "arduino-wifi-tft-lcd-canvas-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "^1.5", features = [] }
pbr = { version = "^1.1" }
clap = { version = "^4.5", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
