[package]
name = "arduino-wifi-tft-lcd-canvas-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "^1.5", features = [] }
pbr = { version = "^1.1" }
clap = { version = "^4.5", features = ["derive"] }
local-ip-address = "0.6.1"

[profile.release]
strip = true
lto = true
opt-level = 3

[[bin]]
name = "dumblebots-canvas-server"
path = "src/main.rs"
