[package]
name = "arduino-wifi-tft-lcd-canvas-server"
description = "Server for the Arduino WiFi TFT LCD Canvas App"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Aditya-A-garwal/arduino-wifi-tft-lcd-canvas-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "^1.5", features = [] }
pbr = { version = "^1.1" }
clap = { version = "^4.5", features = ["derive"] }
local-ip-address = "0.6.1"

[profile.release]
strip = true
lto = true
opt-level = 3

[[bin]]
name = "dumblebots-canvas-server"
path = "src/main.rs"
